# tdep_free_energy_cv

./: README.md  cv_free_energy.py  fit_ifcs.py  pyproject.toml  requirements.txt  steps.md  tdep_cmd.py
configs/: LJ_cv_free_energy.yml  LJ_interp_irred.yml  SW_IFC_config.yml  SW_interp_irred.yml
data/lammps_scripts/: LJ_argon_dynamics.in  LJ_argon_snapshots.in  SW_silicon_dynamics.in
data/structures/: README.md
data/structures/LJ/: infile.ucposcar_fouratom  initial_structure_LJ.data
data/structures/SW/: infile.ssposcar  infile.ucposcar  initial_structure_SW_3UC.data
lammps_scripts/: LJ_argon.in
scripts/: converge_ifc_cutoff.py  converge_ifcs.py  cv_free_energy.py  cv_free_energy_GP.py  ifc_from_MD.py  interpolate_ifcs.py  interpolate_irred.py  sTDEP.py
src/: __init__.py  lammps.py  lammps_force_calculator.py  util.py
src/algorithms/: __init__.py  configs.py  cv_free_energy.py  cv_free_energy_GP.py  ifc_from_MD.py  interpolate_ifcs.py  interpolate_irred.py  sTDEP.py
src/tdep_cmds/: __init__.py  anharmonic_free_energy.py  canonical_configuration.py  extract_force_constants.py  generate_structure.py  md_samples.py  phonon_dispersion.py  tdep_cmd.py
tdep_cmds/: canonical_configuration.py  extract_force_constants.py  phonon_dispersion.py  tdep_cmd.py
